--- a/public/web/assets/css/style.css
+++ b/public/web/assets/css/style.css
@@ -1,8 +1,8 @@
 *{
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .main-nav{
-	background-color: #149B9E33;
+    background-color: #149B9E33;
 }
 #hero {
     background-image: url(../images/hero-banner.jpg);
@@ -22,17 +22,17 @@
     position: relative;
 }
 .steps-box h4{
-	color: #fff;
-	font: normal normal bold 20px/42px Roboto;
-	margin: 0;
+    color: #fff;
+    font: normal normal bold 20px/42px Roboto;
+    margin: 0;
 }
 .steps-box p{
-	color: #fff;
-	font: normal normal normal 14px/17px Roboto;
-	margin: 0;
+    color: #fff;
+    font: normal normal normal 14px/17px Roboto;
+    margin: 0;
 }
 .steps-box span{
-	position: absolute;
+    position: absolute;
 }
 .steps-box span {
     position: absolute;
@@ -71,7 +71,7 @@
     letter-spacing: 0.5px;
 }
 .navbar-light .navbar-nav .nav-link span {
-	color: #C2C2C2;
+    color: #C2C2C2;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: #fff;
@@ -112,10 +112,10 @@
     width: 60%;
 }
 .search-box input.form-control{
-	color: #C2C2C2;
-	background: transparent;
-	box-shadow: none!important;
-	border-color: #414042;
+    color: #C2C2C2;
+    background: transparent;
+    box-shadow: none!important;
+    border-color: #414042;
     font-size: 14px;
     border-right: 0;
 }
@@ -130,7 +130,7 @@
     color: #fff;
 }
 .filter button{
-	box-shadow: none!important;
+    box-shadow: none!important;
 }
 .filter-btn .btn-filter {
     background: #414042;
@@ -158,28 +158,28 @@
     padding: 6px 24px;
 }
 .login-btn button:hover {
-	background: #673AAA;
-	color: #fff;
+    background: #673AAA;
+    color: #fff;
 }
 .reg-btn button {
-	font-weight: 500;
-    padding: 6px 24px;	
+    font-weight: 500;
+    padding: 6px 24px;
     background: #673AAA;
     color: #fff;
 }
 .reg-btn button:hover {
-	background: #fff;
-	color: #673AAA;
+    background: #fff;
+    color: #673AAA;
 }
 .search-box input::placeholder {
-  color: #C2C2C2;
-  opacity: 1;
+    color: #C2C2C2;
+    opacity: 1;
 }
 .search-box input:-ms-input-placeholder {
-  color: #C2C2C2;
+    color: #C2C2C2;
 }
 .search-box input::-ms-input-placeholder {
-  color: #C2C2C2;
+    color: #C2C2C2;
 }
 .filter-pop {
     background: #414042;
@@ -245,7 +245,7 @@
     transform: translate(-50%, -50%);
 }
 .checkbox-group label{
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 .checkbox-group input {
     height: 18px;
@@ -255,8 +255,8 @@
     border-color: #c2c2c2;
 }
 .checkbox-group input:checked {
-	border-color: #60D6D6;
-	background: transparent;
+    border-color: #60D6D6;
+    background: transparent;
 }
 .form-check-input:checked[type=checkbox] {
     background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%2360D6D6' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e")
@@ -288,7 +288,7 @@
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23C2C2C2' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
 }
 .f-body .col-md-3{
-	margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 .price-range-slider {
     width: 100%;
@@ -306,10 +306,11 @@
     box-shadow: none;
     border: none;
     width: 150px;
-	text-align: right;
-	border: none;
-	outline: none;
-	box-shadow: none;
+    text-align: right;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    font-weight: 600;
 }
 .price-range-slider .range-bar {
     border: none;
@@ -353,7 +354,7 @@ span.hr {
     position: relative;
 }
 .checkbox-group.color-check:after{
-	display: none;
+    display: none;
 }
 section#vehicles {
     background: #F7F7F7;
@@ -366,9 +367,9 @@ section#vehicles .heading {
     justify-content: space-between;
 }
 section#vehicles .heading h1{
-	font: normal normal bold 32px/42px Roboto;
-	color: #2C2C2C;
-	margin: 0;
+    font: normal normal bold 32px/42px Roboto;
+    color: #2C2C2C;
+    margin: 0;
 }
 section#vehicles .heading a {
     color: #585858;
@@ -390,7 +391,7 @@ section#vehicles .heading a {
     width: 22%;
 }
 .car-img img{
-	width: 100%;
+    width: 100%;
     border-radius: 6px
 }
 .details-box {
@@ -456,7 +457,7 @@ section#vehicles .heading a {
     padding: 9px 6px;
 }
 .car-price {
-    width: 29%;	
+    width: 29%;
     padding: 6px 10px 6px 20px;
 }
 span.cat-tags {
@@ -895,7 +896,7 @@ footer hr {
     font-weight: bold;
 }
 .car-images {
-    width: 32%;
+    width: 34%;
     display: inline-block;
 }
 .swiper-slide {
@@ -910,17 +911,21 @@ footer hr {
     border-radius: 6px;
 }
 .car-dtlist {
-    width: 26%;
+    width: 30%;
     display: inline-block;
     background: #F0EBF6;
     border-radius: 6px;
     padding: 30px 20px;
-    margin: 0 20px;
+    margin: 0 2%;
 }
 .car-dtlist .dtl-box:nth-last-of-type(1) {
     border-bottom: none;
     padding-bottom: 0;
     margin-bottom: 0;
+}
+.car-details {
+    display: flex;
+    align-items: flex-start;
 }
 
 .car-dtlist .dtl-box p {
@@ -950,8 +955,458 @@ footer hr {
 .car-dtlist .dtl-box .value p {
     color: #2C2C2C;
     font-size: 16px;
-    font-weight: 500;    
+    font-weight: 500;
 }
 .bid-model {
     background: rgb(96 214 214 / 94%);
+}
+.car-opt {
+    width: 33%;
+    display: inline-block;
+}
+.carnm {
+    margin-bottom: 10px;
+}
+.carnm h2 {
+    font: normal normal bold 22px/27px Roboto;
+    letter-spacing: 0px;
+    color: #2C2C2C;
+    margin-top: 0;
+}
+.carnm p {
+    color: #2C2C2C;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0;
+}
+.ini-price {
+    background: #F3F3F3 0% 0% no-repeat padding-box;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
+.ini-price p {
+    margin: 0;
+    letter-spacing: 0px;
+    color: #2C2C2C;
+    font-size: 16px;
+}
+.ini-price p span {
+    font: normal normal bold 18px/24px Roboto;
+    letter-spacing: 0px;
+    color: #673AAA;
+}
+.int-box {
+    background: #F3F3F3 0% 0% no-repeat padding-box;
+    border-radius: 6px;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.int-box p {
+    color: #673AAA;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+.int-box p i{
+    font-size: 22px;
+}
+.place-bid-blue {
+    background: #673AAA 0% 0% no-repeat padding-box;
+    border-radius: 6px;
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+}
+a.place-bid-blue:hover {
+    color: #fff;
+}
+.auction-details h3 {
+    font: normal normal bold 18px/24px Roboto;
+    color: #2C2C2C;
+    margin-bottom: 10px;
+}
+.createdon {
+    width: calc(50% - 47px);
+    float: left;
+    position: relative;
+    background: #F0EBF6;
+    margin-left: 32px;
+    border-radius: 6px;
+    padding: 10px;
+    padding-left: 32px;
+}
+.auction-details .createdon:nth-of-type(1) {
+    margin-right: 30px;
+}
+.createdon span {
+    position: absolute;
+    left: -32px;
+    background: #149B9E;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 6px;
+    padding: 6px;
+    width: 50px;
+    height: 50px;
+    font-size: 28px;
+    line-height: 39px;
+    color: #fff;
+    text-align: center;
+}
+.dates p {
+    margin-bottom: 4px;
+    font: normal normal normal 16px/22px Roboto;
+    color: #673AAA;
+}
+.dates b {
+    font: normal normal bold 16px/14px Roboto;
+    color: #2C2C2C;
+}
+.time-temain {
+    position: relative;
+    background: #f0ebf6;
+    display: inline-block;
+    border-radius: 6px;
+    padding: 10px;
+    margin-top: 20px;
+    width: calc(100% - 32px);
+    margin-left: 32px;
+    margin-bottom: 20px;
+}
+div#getting-started {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    padding-left: 32px;
+}
+.time-temain>span {
+    background: #673AAA;
+    position: absolute;
+    left: -32px;
+    height: 64px;
+    width: 64px;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 34px;
+    text-align: center;
+    line-height: 64px;
+}
+div#getting-started span {
+    background: white;
+    text-align: center;
+    padding: 8px 20px;
+    border-radius: 6px;
+    font: normal normal medium 14px/13px Roboto;
+    color: #673AAA;
+}
+div#getting-started span strong {
+    display: block;
+    font: normal normal bold 24px/28px Roboto;
+    color: #2C2C2C;
+}
+.notes p {
+    font: normal normal normal 16px/24px Roboto;
+    color: #414042;
+    margin: 0;
+}
+.modal-footer {
+    justify-content: flex-start;
+    border-top: 0px solid #dee2e6;
+    background: #F3F3F3;
+}
+.modal-footer .row {
+    width: 100%;
+}
+div#slider-incamount span:nth-of-type(2) {
+    display: none;
+}
+.modal-footer .price-range-slider .range-bar {
+    background: #60D6D6;
+}
+.modal-footer .price-range-slider .range-bar .ui-slider-handle {
+    background: #149B9E;
+}
+.auto-inc .form-check {
+    display: flex;
+    align-items: flex-end;
+    gap: 10px;
+    margin: 0;
+    padding-top: 0;
+    height: auto;
+    min-height: auto;
+    margin-bottom: 34px;
+}
+.auto-inc .form-check-input:checked {
+    background-color: transparent;
+    border-color: #149B9E;
+}
+.auto-inc .form-check label {
+    font: normal normal bold 14px/16px Roboto;
+    letter-spacing: 0px;
+    color: #6B6B6B;
+}
+.auto-inc .form-check.chked label {
+    color: #149B9E;
+}
+.form-check-input:focus{
+    box-shadow: none;
+}
+.auto-inc .price-range-slider {
+    padding: 0;
+}
+.auto-inc .price-range-slider p.range-value {
+    margin-bottom: 8px;
+}
+.auto-inc .price-range-slider div#slider-incamount {
+    margin: 0;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.modal-footer input.form-control {
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+    border-radius: 6px;
+    color: #585858;
+    font-size: 16px;
+    box-shadow: none;
+}
+.bid-amoun input.form-control {
+    margin-bottom: 10px;
+}
+.modal-footer {
+    display: none;
+}
+.show-footeer .modal-footer {
+    display: block;
+}
+.current-high {
+    align-items: center;
+    justify-content: space-between;
+    background: #E41F11;
+    border-radius: 6px;
+    padding: 10px 16px;
+    display: none;
+}
+.current-high p {
+    color: #fff;
+    margin: 0;
+    font-weight: 500;
+    font-size: 16px;
+}
+.current-high p span {
+    font-weight: 700;
+}
+.show-footeer .int-box a.place-bid-blue{
+    display: none;
+}
+.show-footeer .current-high {
+    display: flex;
+}
+.login-model button.btn-close {
+    position: absolute;
+    background-color: #673AAA;
+    top: 24px;
+    right: 24px;
+    opacity: 0.5;
+    transition: all 0.3s;
+}
+.login-model button.btn-close:hover {
+    opacity: 1;
+}
+.login-model .modal-header {
+    display: inline-block;
+    position: relative;
+    border: none;
+}
+.login-model .modal-header h5 {
+    font: normal normal bold 24px/32px Roboto;
+    color: #2C2C2C;
+}
+.login-model .modal-body {
+    padding: 30px;
+}
+.login-model .login-form .form-control {
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+    border-radius: 6px;
+    box-shadow: none;
+    margin-bottom: 20px;
+}
+.login-model form a {
+    display: inline-block;
+    clear: both;
+    text-align: right;
+    width: 100%;
+    letter-spacing: 0px;
+    color: #673AAA;
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
+    line-height: 18px;
+    margin-bottom: 10px;
+}
+.forgotlink.text-end {
+    margin-bottom: 10px;
+}
+.login-model form a {
+    color: #673AAA;
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
+    line-height: 18px;
+}
+input.place-bid-blue {
+    width: 100%;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    margin-bottom: 30px;
+}
+.login-model p {
+    text-align: center;
+    color: #585858;
+    font-size: 14px;
+}
+.login-model p a{
+    color: #673AAA;
+    font-weight: 700;
+    text-decoration: none;
+}
+.login-model b{
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    color: #2C2C2C;
+    margin-bottom: 30px;
+    position: relative;
+}
+.login-model b:after {
+    position: absolute;
+    background: #F3F3F3;
+    height: 1px;
+    width: 46%;
+    content: '';
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.login-model b:before {
+    position: absolute;
+    background: #F3F3F3;
+    height: 1px;
+    width: 46%;
+    content: '';
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.social-login {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    margin-bottom: 10px;
+}
+.social-login a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 67px 10px 30px;
+    position: relative;
+    border-radius: 6px;
+}
+.social-login .facebook a {
+    background-color: #4267B2;
+}
+.social-login .gmail a {
+    background: #4285F4;
+}
+.social-login a span {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    height: 37px;
+    width: 37px;
+    text-align: center;
+    background: #fff;
+    font-size: 24px;
+    line-height: 40px;
+    border-radius: 0 6px 6px 0;
+}
+.social-login .facebook a span {
+    color: #4267B2;
+}
+.social-login .gmail a span img {
+    width: 22px;
+}
+.social-login .gmail a span {
+    line-height: 33px;
+}
+.modal {
+    background: rgb(96 214 214 / 94%);
+}
+.select-opt {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #F3F3F3;
+    padding: 12px 40px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    position: relative;
+}
+.select-opt:after {
+    position: absolute;
+    background: #DCDCDC;
+    height: 36px;
+    width: 1px;
+    content: '';
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.select-opt label {
+    font-size: 16px;
+    font-weight: 600;
+    color: #C2C2C2;
+}
+.select-opt .form-check.chked label {
+    color: #673AAA;
+}
+.form-check-input:checked {
+    background-color: #673aaa;
+    border-color: #673aaa;
+}
+.terms-chack label a {
+    display: initial;
+}
+.terms-chack {
+    width: 62%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.terms-chack .form-check-input:checked[type=checkbox] {
+    background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23673AAA' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e")
+}
+.terms-chack .form-check-input:checked {
+    background-color: transparent;
+    border-color: #673aaa;
+}
+.form-check-input:checked[type=radio] {
+    background-color: #673aaa;
+    border-color: #673aaa;
 }
