wishlist and edit car done

--- a/public/web/assets/css/style.css
+++ b/public/web/assets/css/style.css
@@ -484,6 +484,7 @@ a.like {
     top: 10px;
     right: 10px;
     align-items: center;
+    cursor: pointer;
 }
 a.like i.las.la-heart {
     font-size: 24px;
