sheet point change

--- a/public/web/assets/css/custom.css
+++ b/public/web/assets/css/custom.css
@@ -71,7 +71,7 @@ div.my-auction-counter span strong {
 }
 
 #contatti{
-    background-color: #70c3be;
+    /*background-color: #70c3be;*/
     letter-spacing: 2px;
 }
 #contatti a{
