--- a/public/web/assets/css/style.css
+++ b/public/web/assets/css/style.css
@@ -306,7 +306,7 @@
     font-weight: initial;
     box-shadow: none;
     border: none;
-    width: 150px;
+    /*width: 150px;*/
 	text-align: right;
 	border: none;
 	outline: none;
