website footer change

--- a/public/web/assets/css/custom.css
+++ b/public/web/assets/css/custom.css
@@ -129,4 +129,7 @@ div.my-auction-counter span strong {
     background: #d8f9fb;
     padding: 12px;
 }
+.textWhite{
+    color: #9D9D9D !important;
+}
 
