admin panel arabic side string added

--- a/public/assets/css/style.bundle.rtl.css
+++ b/public/assets/css/style.bundle.rtl.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 :root {
-    --bs-blue: #009ef6;
+    --bs-blue: #FF5757;
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
     --bs-pink: #d63384;
